# dashboard-parapente

./: .coderabbit.yaml  .dockerignore  .env.development  .env.development.example  .env.example  .gitattributes  .gitignore  .mergify.yml  .nxignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  CHANGELOG_EMAGRAM.md  CODERABBIT_REMAINING_FIXES.md  COMMENT_UTILISER.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DASHBOARD-VS-EMAIL-DIFFERENCES.md  DEBUG_RESOLUTION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_NX_QUICK_START.md  DEVELOPMENT.md  Dockerfile  EMAGRAM_DEPLOYMENT.md  EMAGRAM_README.md  EMAGRAM_TODO.md  FEATURE-COMPLETION.md  FIX_SUMMARY.md  FLIGHT_PAGE_TEST.md  FRONTEND_QUICKSTART.md  FRONTEND_TESTS_COMPLETE.md  GPX-3D-VIEWER.md  GUIDE_DASHBOARD_METEO.md  GUIDE_UTILISATION_SPOTS.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPORT_SUMMARY.md  LICENSE  MISSION_COMPLETE.md  (+49 more)
backend/: .coveragerc  .env.backup  .env.example  .env.test  CAMERA_ORIENTATION.md  CESIUM_VIDEO_EXPORT_BEST_PRACTICES.md  CHANGELOG_WEBHOOK.md  Dockerfile.coverage  Dockerfile.test  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  PHASE2_SUMMARY.md  PRODUCTION_SETUP.md  README.md  SCRAPER_IMPROVEMENTS.md  STATUS.txt  SUBAGENT_COMPLETION_REPORT.md  VIDEO_QUALITY_RECOMMENDATIONS.md  __init__.py  api_response.json  best_spot.py  cache.py  clear_cache.py  config.py  conftest.py  database.py  debug_weather.py  emagram_aggregator.py  emagram_multi_source.py  entrypoint.sh  explore_meteociel.py  explore_meteociel_api.py  import_flights_from_log.py  init_database.py  init_db.py  main.py  migrate_add_camera_fields.py  migrate_add_site_type.py  migrate_add_video_fields.py  migrate_camera_to_angle.py  (+53 more)
backend/db/: dashboard.db.backup_20260305_065408  dashboard.db.backup_emergency_20260308_115412
backend/emagram_scheduler/: __init__.py  (+1 more)
(+1091 files in other folders)
